# housing-target-scraper

./: .gitignore  README.md  data.pkl  main.py  pyproject.toml
housing_target_scraper/: logger.py  scraper.py  website.py
housing_target_scraper/config/: config.yaml
housing_target_scraper/utils/: config_utils.py  parallelism_utils.py  zipcodes_query_utils.py
tests/: test_scraper.py
